Fix failing build (#285)