@@ -6,13 +6,14 @@ import uk.gov.hmcts.ecm.common.model.helper.TribunalOffice;
 import uk.gov.hmcts.et.common.model.bulk.types.DynamicFixedListType;
 import uk.gov.hmcts.et.common.model.bulk.types.DynamicValueType;
 import uk.gov.hmcts.ethos.replacement.docmosis.domain.admin.AdminData;
-import uk.gov.hmcts.ethos.replacement.docmosis.domain.referencedata.CourtWorkerType;
 import uk.gov.hmcts.ethos.replacement.docmosis.domain.referencedata.FileLocation;
 import uk.gov.hmcts.ethos.replacement.docmosis.domain.repository.FileLocationRepository;
+
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
@@ -34,14 +35,15 @@ class FileLocationServiceTest {
     @BeforeEach
     void setup() {
         fileLocationRepository = mock(FileLocationRepository.class);
-        adminData = createAdminData(fileLocationCode, fileLocationName, tribunalOffice);
+        adminData = createAdminData();
         fileLocation = createFileLocation(adminData);
         fileLocationService = new FileLocationService(fileLocationRepository);
     }
 
     @Test
     void shouldSaveFileLocation() {
-        when(fileLocationRepository.existsByCodeAndTribunalOffice(fileLocationCode, TribunalOffice.valueOfOfficeName(tribunalOffice))).thenReturn(false);
+        when(fileLocationRepository.existsByCodeAndTribunalOffice(fileLocationCode,
+                TribunalOffice.valueOfOfficeName(tribunalOffice))).thenReturn(false);
         when(fileLocationRepository.existsByNameAndTribunalOffice(fileLocationName,
                 TribunalOffice.valueOfOfficeName(tribunalOffice))).thenReturn(false);
 
@@ -51,14 +53,16 @@ class FileLocationServiceTest {
 
     @Test
     void shouldReturnErrorIfFileLocationWithSameCodeAndOfficeExists() {
-        when(fileLocationRepository.existsByCodeAndTribunalOffice(fileLocationCode,TribunalOffice.valueOfOfficeName(tribunalOffice))).thenReturn(true);
+        when(fileLocationRepository.existsByCodeAndTribunalOffice(fileLocationCode,
+                TribunalOffice.valueOfOfficeName(tribunalOffice))).thenReturn(true);
         assertThrows(SaveFileLocationException.class, () -> fileLocationService.saveFileLocation(adminData));
         verify(fileLocationRepository, never()).save(fileLocation);
     }
 
     @Test
     void shouldReturnErrorIfFileLocationWithSameNameAndOfficeExists() {
-        when(fileLocationRepository.existsByCodeAndTribunalOffice(fileLocationCode,TribunalOffice.valueOfOfficeName(tribunalOffice))).thenReturn(false);
+        when(fileLocationRepository.existsByCodeAndTribunalOffice(fileLocationCode,
+                TribunalOffice.valueOfOfficeName(tribunalOffice))).thenReturn(false);
         when(fileLocationRepository.existsByNameAndTribunalOffice(fileLocationName,
                 TribunalOffice.valueOfOfficeName(tribunalOffice))).thenReturn(true);
         assertThrows(SaveFileLocationException.class, () -> fileLocationService.saveFileLocation(adminData));
@@ -76,12 +80,10 @@ class FileLocationServiceTest {
         List<String> errors = fileLocationService.updateFileLocation(adminData);
         verify(fileLocationRepository, times(1)).save(fileLocation);
         assertEquals(0, errors.size());
-
     }
 
     @Test
     void shouldUpdateFileLocation_ReturnFileLocationNameAndOfficeConflictError() {
-
         when(fileLocationRepository.existsByNameAndTribunalOffice(fileLocationName,
                 TribunalOffice.valueOfOfficeName(tribunalOffice))).thenReturn(true);
         when(fileLocationRepository.findByCode(fileLocationCode)).thenReturn(fileLocation);
@@ -89,19 +91,18 @@ class FileLocationServiceTest {
         List<String> errors = fileLocationService.updateFileLocation(adminData);
         verify(fileLocationRepository, times(0)).save(fileLocation);
         assertEquals(1, errors.size());
-        assertEquals(errors.get(0), "A file location with the same Name (testName) and Tribunal Office (Aberdeen) already exists.");
+        assertEquals("A file location with the same Name (testName) and Tribunal Office (Aberdeen) already exists.",
+                errors.get(0));
     }
 
     @Test
     void midEventSelectOffice_shouldReturnDynamicList() {
-
         when(fileLocationRepository.findByTribunalOfficeOrderByNameAsc(TribunalOffice.valueOfOfficeName(tribunalOffice)))
-                .thenReturn(Arrays.asList(fileLocation));
+                .thenReturn(List.of(fileLocation));
 
         List<String> errors = fileLocationService.midEventSelectTribunalOffice(adminData);
         assertEquals(0, errors.size());
         assertEquals(1, adminData.getFileLocationList().getListItems().size());
-
     }
 
     @Test
@@ -112,12 +113,11 @@ class FileLocationServiceTest {
 
         List<String> errors = fileLocationService.midEventSelectTribunalOffice(adminData);
         assertEquals(1, errors.size());
-        assertEquals(errors.get(0), "There is not any file location found in the Aberdeen office");
+        assertEquals("There is not any file location found in the Aberdeen office", errors.get(0));
     }
 
     @Test
     void midEventSelectFileLocation_shouldReturnFileLocation() {
-
         when(fileLocationRepository.findByCode(adminData.getFileLocationCode()))
                 .thenReturn(fileLocation);
 
@@ -130,17 +130,16 @@ class FileLocationServiceTest {
 
     @Test
     void midEventSelectFileLocation_shouldGiveFileLocationNotFoundByFileLocationCode() {
-
         when(fileLocationRepository.findByTribunalOfficeOrderByNameAsc(TribunalOffice.valueOfOfficeName(tribunalOffice)))
                 .thenReturn(null);
 
         List<String> errors = fileLocationService.midEventSelectFileLocation(adminData);
 
         assertEquals(1, errors.size());
-        assertEquals(errors.get(0), "There is not any file location found with the testCode location code");
+        assertEquals("There is not any file location found with the testCode location code", errors.get(0));
     }
 
-    private AdminData createAdminData(String fileLocationCode, String fileLocationName, String tribunalOffice) {
+    private AdminData createAdminData() {
         AdminData adminData = new AdminData();
         adminData.setFileLocationCode(fileLocationCode);
         adminData.setFileLocationName(fileLocationName);
@@ -165,7 +164,7 @@ class FileLocationServiceTest {
 
     @Test
     void testInitImport() {
-        var adminData = createAdminData(fileLocationCode,fileLocationName, tribunalOffice);
+        var adminData = createAdminData();
         fileLocationService.initAdminData(adminData);
 
         assertNull(adminData.getFileLocationCode());
